--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-cli-nouislider",
   "dependencies": {
-    "nouislider": "habeascorp/noUiSlider",
+    "nouislider": "habeascorp/noUiSlider#master",
     "ember": "~2.4.1",
     "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.2",
